Fixed link and edited text
Signed-off-by: Tomáš Taro <tomas@getadblock.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- HEADER -->
         <div id="header_wrap" class="outer">
             <header class="inner">
-                <a id="forkme_banner" href="https://github.com/tomasko126/easylistczechandslovak">GitHub</a>
+                <a id="forkme_banner" href="https://github.com/tomasko126/easylistczechandslovak">Easylist CZ/SK je na GitHube!</a>
 
                 <h1 id="project_title">Easylist Czech and Slovak</h1>
                 <h2 id="project_tagline">Oficiálny český a slovenský zoznam filtrov pre rozšírenia na blokovanie reklám</h2>
@@ -71,7 +71,7 @@
 
                 <p>V auguste 2015 začal byť zoznam filtrov nepravidelne aktualizovaný, vzhľadom na menej voľného času jeho autora.</p>
 
-                <p>Na začiatku roka 2016 bol zoznam filtrov oživený vďaka <a href="@aslanex">Aslanexovi</a>, ktorý sa stal hlavným prispievateľom do zoznamu filtrov.</p>
+                <p>Na začiatku roka 2016 bol zoznam filtrov oživený vďaka <a href="https://github.com/aslanex" class="user-mention">Aslanexovi</a>, ktorý sa stal hlavným prispievateľom do zoznamu filtrov.</p>
 
                 <p>V apríli 2016 bol publikovaný článok na <a href="http://www.lupa.cz/clanky/nahly-pokles-cisel-navstevnosti-ceskeho-internetu-mohl-za-to-filtr-pro-adblock/">Lupa.cz</a> a <a href="http://www.dsl.sk/article.php?article=18250&amp;hot=3">dsl.sk</a> ohľadom blokovania trackovacej domény <a href="https://gemius.pl">Gemius</a>.</p>
 
