Added button for reporting an ad
Signed-off-by: Tomáš Taro <tomas@getadblock.com>

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div id="header_wrap" class="outer">
             <header class="inner">
                 <a id="forkme_banner" href="https://github.com/tomasko126/easylistczechandslovak">Easylist CZ/SK je na GitHube!</a>
-
                 <h1 id="project_title">Easylist Czech and Slovak</h1>
                 <h2 id="project_tagline">Oficiálny český a slovenský zoznam filtrov pre rozšírenia na blokovanie reklám</h2>
+                <a id="reportanad_banner" href="https://github.com/tomasko126/easylistczechandslovak">Nahlásenie nezablokovanej reklamy</a>
             </header>
         </div>
 
@@ -27,7 +27,10 @@
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
                 <h3>
-                    <a id="Čo-je-easylist-czech-and-slovak" class="anchor" href="#%C4%8Co-je-easylist-czech-and-slovak" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Čo je Easylist Czech and Slovak?</h3>
+                    <a id="Čo-je-easylist-czech-and-slovak" class="anchor" href="#%C4%8Co-je-easylist-czech-and-slovak" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>
+                Čo je Easylist Czech and Slovak?</h3>
 
                 <p>Easylist Czech and Slovak je zoznam filtrov, na základe ktorého sú blokované reklamy na českých a slovenských webstránkach.</p>
 
@@ -106,7 +109,7 @@
         <div id="footer_wrap" class="outer">
             <footer class="inner">
                 <p class="copyright">Easylist Czech and Slovak je udržiavaný používateľmi <a href="https://github.com/tomasko126">@tomasko126</a> a
-                <a href="https://github.com/aslanex">@aslanex</a></p>
+                    <a href="https://github.com/aslanex">@aslanex</a></p>
             </footer>
         </div>
 
