Update link for reporting an ad
Signed-off-by: Tomáš Taro <tomas@getadblock.com>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a id="forkme_banner" href="https://github.com/tomasko126/easylistczechandslovak">Easylist CZ/SK je na GitHube!</a>
                 <h1 id="project_title">Easylist Czech and Slovak</h1>
                 <h2 id="project_tagline">Oficiálny český a slovenský zoznam filtrov pre rozšírenia na blokovanie reklám</h2>
-                <a id="reportanad_banner" href="https://github.com/tomasko126/easylistczechandslovak">Nahlásenie nezablokovanej reklamy</a>
+                <a id="reportanad_banner" href="https://easylist-czech-and-slovak.tenderapp.com">Nahlásenie nezablokovanej reklamy</a>
             </header>
         </div>
 
